<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_login"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/inicio_sesion_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/inicio_de_sesion"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <Button

            android:id="@+id/button_Inicia_sesion_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/inter_light"
            android:fontFeatureSettings=""
            android:text="@string/inicia_sesion"
            android:onClick="setupp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/olv_contrasena_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/olvido_su_contrasena" />

    </LinearLayout>

    <TextView
        android:id="@+id/tutulo_inicio_sesion_textView"
        android:layout_width="90dp"
        android:layout_height="21dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="28dp"
        android:text="@string/titulo_inicio_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>