<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_login"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registro_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/registrate"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextTextUsuarioR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/usuarioR"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextEmailAdressR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextPasswordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <Button

            android:id="@+id/registro_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/inter_light"
            android:fontFeatureSettings=""
            android:text="@string/aceptar"
            android:onClick="setup"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tutulo_registro_textView"
        android:layout_width="74dp"
        android:layout_height="21dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="24dp"
        android:text="@string/registrate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_imageButtonR"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        android:contentDescription="Back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>