<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="767dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageview2"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/userdafault"></ImageView>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/boton_perfil1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_usuario"
                    android:textSize="25dp"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/mensaje1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Estado" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:orientation="vertical">

            </LinearLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/logo_utaskdeo"></ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/TareasUrgentes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tareasurgentes"
                android:textSize="21sp" />

            <Button
                android:id="@+id/boton_tarea"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/cuadro_tareas"
                android:gravity="left"
                android:text="Tarea AM"
                android:textColor="#FFFFFF"
                android:textSize="29sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/cuadro_tareas"
                android:gravity="left"
                android:text="Proyecto IA"
                android:textColor="#FFFFFF"
                android:textSize="29sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="264dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/Notas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notas"
                android:textSize="21sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="left"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="150dp"

                        android:layout_marginLeft="0dp"
                        android:background="@drawable/cuadro_tareas"
                        android:text="Nota 2"
                        android:textColor="#FFFFFF"
                        android:textSize="29sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:orientation="horizontal"

                    >

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/cuadro_tareas"
                        android:text="Nota 1"
                        android:textColor="#FFFFFF"
                        android:textSize="29sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_bbar"
            android:backgroundTint="@color/white"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_nav" />
    </LinearLayout>


</RelativeLayout>